welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:3: error: value Orange is not a member of object java.awt.Color
while (getCouleurSol()!=Color.Orange) {
                              ^